@@ -2,6 +2,13 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*xmwde-0_p20110714 (14 Jul 2011)
+
+  14 Jul 2011; Michael Weber <xmw@gentoo.org> -xmwde-0_p20110601.ebuild,
+  -xmwde-0_p20110711.ebuild, -xmwde-0_p20110713.ebuild,
+  +xmwde-0_p20110714.ebuild:
+  version bump, added xdotool for windowbounce
+
 *xmwde-0_p20110713 (13 Jul 2011)
 
   13 Jul 2011; Michael Weber <xmw@gentoo.org> +xmwde-0_p20110713.ebuild:
